<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple"
    android:padding="24dp"
    tools:context=".IdentificationFragment">

    <LinearLayout
        android:id="@+id/llPlayerXIdentification"
        android:layout_width="124dp"
        android:layout_height="124dp"
        android:background="@drawable/clickable_item_button"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toTopOf="@+id/etPlayerName"
        app:layout_constraintEnd_toStartOf="@+id/llPlayerOIdentification"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/baloo_thambi"
            android:text="@string/player"
            android:textAllCaps="true"
            android:textColor="@color/purple"
            android:textSize="24sp" />

        <ImageView
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:src="@drawable/player_x" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llPlayerOIdentification"
        android:layout_width="124dp"
        android:layout_height="124dp"
        android:background="@drawable/clickable_item_button"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toTopOf="@+id/etPlayerName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/llPlayerXIdentification"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/baloo_thambi"
            android:text="@string/player"
            android:textAllCaps="true"
            android:textColor="@color/purple"
            android:textSize="24sp" />

        <ImageView
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:src="@drawable/player_o" />
    </LinearLayout>


    <EditText
        android:id="@+id/etPlayerName"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:autofillHints=""
        android:background="@drawable/edit_text_view"
        android:fontFamily="@font/baloo_thambi"
        android:hint="@string/player_x_name"
        android:importantForAutofill="no"
        android:maxLength="25"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:textColor="@color/purple"
        android:textColorHint="@color/purple_opacity_50"
        android:textSize="20sp"
        android:inputType="textCapCharacters"
        android:layout_marginTop="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/llPlayerOIdentification"
        app:layout_constraintStart_toStartOf="@+id/llPlayerXIdentification"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnConfirm"
        android:layout_width="0dp"
        android:layout_height="54dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/clickable_item_button"
        android:fontFamily="@font/baloo_thambi"
        android:text="@string/confirm"
        android:textColor="@color/purple"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>