<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple"
    tools:context=".GameScreenFragment">

    <com.diogoizele.ticTacToeGame.ScoreboardView
        android:id="@+id/scoreboardViewPlayerO"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/scoreboardViewPlayerX"
        app:layout_constraintTop_toTopOf="parent"
        app:src="@drawable/player_o" />

    <com.diogoizele.ticTacToeGame.ScoreboardView
        android:id="@+id/scoreboardViewPlayerX"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/parent"
        app:layout_constraintEnd_toStartOf="@+id/scoreboardViewPlayerO"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:src="@drawable/player_x" />

    <LinearLayout
        android:id="@+id/parent"
        android:layout_width="320dp"
        android:layout_height="320dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/board_view"
        android:orientation="vertical"
        android:padding="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_marginBottom="6dp">

            <ImageButton
                android:id="@+id/btnSlot1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="6dp"
                android:layout_weight="1"
                android:background="@drawable/clickable_item_button"
                tools:src="@drawable/player_x" />
            />

            <ImageButton
                android:id="@+id/btnSlot2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="6dp"
                android:layout_marginEnd="6dp"
                android:layout_weight="1"
                android:background="@drawable/clickable_item_button"
                tools:src="@drawable/player_o" />
            />

            <ImageButton
                android:id="@+id/btnSlot3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="6dp"
                android:layout_weight="1"
                android:background="@drawable/clickable_item_button" />
            />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="6dp">

            <ImageButton
                android:id="@+id/btnSlot4"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="6dp"
                android:layout_weight="1"
                android:background="@drawable/clickable_item_button" />
            />

            <ImageButton
                android:id="@+id/btnSlot5"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="6dp"
                android:layout_marginEnd="6dp"
                android:layout_weight="1"
                android:background="@drawable/clickable_item_button" />
            />

            <ImageButton
                android:id="@+id/btnSlot6"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="6dp"
                android:layout_weight="1"
                android:background="@drawable/clickable_item_button" />
            />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="6dp">

            <ImageButton
                android:id="@+id/btnSlot7"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="6dp"
                android:layout_weight="1"
                android:background="@drawable/clickable_item_button" />
            />

            <ImageButton
                android:id="@+id/btnSlot8"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="6dp"
                android:layout_marginEnd="6dp"
                android:layout_weight="1"
                android:background="@drawable/clickable_item_button" />
            />

            <ImageButton
                android:id="@+id/btnSlot9"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="6dp"
                android:layout_weight="1"
                android:background="@drawable/clickable_item_button" />
            />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/tvPlayerNameX"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/baloo_thambi"
        android:textColor="@color/yellow"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/parent"
        app:layout_constraintEnd_toEndOf="@+id/scoreboardViewPlayerX"
        app:layout_constraintHorizontal_bias="0.513"
        app:layout_constraintStart_toStartOf="@+id/scoreboardViewPlayerX"
        app:layout_constraintTop_toBottomOf="@+id/scoreboardViewPlayerX"
        app:layout_constraintVertical_bias="0.1"
        android:visibility="gone"
        tools:text="James Page"
        tools:visibility="visible"/>

    <TextView
        android:id="@+id/tvPlayerNameO"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/baloo_thambi"
        android:textColor="@color/yellow"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/parent"
        app:layout_constraintEnd_toEndOf="@+id/scoreboardViewPlayerO"
        app:layout_constraintStart_toStartOf="@+id/scoreboardViewPlayerO"
        app:layout_constraintTop_toBottomOf="@+id/scoreboardViewPlayerO"
        app:layout_constraintVertical_bias="0.1"
        android:visibility="gone"
        tools:text="Dilly Jonny"
        tools:visibility="visible"
        />

    <View
        android:id="@+id/backdrop"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#BF000000"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clBackdropContent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="24dp"
        android:visibility="gone">

        <TextView
            android:id="@+id/tvPlayer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/baloo_thambi"
            android:text="@string/player"
            android:textAllCaps="true"
            android:textColor="@color/yellow"
            android:textSize="36sp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/ivIcon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/ivTrophy"
            android:layout_width="68dp"
            android:layout_height="56dp"
            android:src="@drawable/trophy"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tvWins"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

       <ImageView
           android:id="@+id/ivIcon"
           android:layout_width="54dp"
           android:layout_height="54dp"
           app:layout_constraintBottom_toTopOf="@+id/tvWins"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toStartOf="parent"
           app:tint="@color/yellow" />

        <TextView
            android:id="@+id/tvWins"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/baloo_thambi"
            android:text="@string/wins"
            android:textAllCaps="true"
            android:textColor="@color/yellow"
            android:textSize="48sp"
            app:layout_constraintBottom_toTopOf="@+id/btnPlayAgain"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.6" />

        <Button
            android:id="@+id/btnPlayAgain"
            android:layout_width="0dp"
            android:layout_height="58dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/clickable_item_button"
            android:fontFamily="@font/baloo_thambi"
            android:text="@string/play_again"
            android:textAllCaps="true"
            android:textColor="@color/purple"
            android:textSize="32sp"
            app:layout_constraintBottom_toTopOf="@id/btnRestart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


        <Button
            android:id="@+id/btnRestart"
            android:layout_width="0dp"
            android:layout_height="58dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/clickable_item_button"
            android:fontFamily="@font/baloo_thambi"
            android:text="@string/restart"
            android:textAllCaps="true"
            android:textColor="@color/purple"
            android:textSize="32sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>